--- a/css/style.css
+++ b/css/style.css
@@ -165,5 +165,17 @@ section .book-selected-content .cap-vers{
 
 #book-selected-number{
     font-size: 0.5rem;
-    text-align: center;
+}
+
+.book-selected-text{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    text-align: justify;
+}
+
+.book-selected-p{
+    display: flex;
+    flex-direction: row;
+    gap: .2rem;
 }
