--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,16 @@ section button:active{
     border-radius: 16px;
     box-shadow: 2px 2px 4px rgba(128, 128, 128, 0.2), 
     inset 1px 1px 4px rgba(255, 255, 255, 0.5);
+    transform: scale(1);
+}
+
+.principal .book:hover{
+    box-shadow: inset 3px 3px 6px rgba(0, 0, 0, 0.2),
+    2px 2px 6px rgba(255, 255, 255, 0.4);
+}
+
+.principal .book:active{
+    background-color: #a49f5e
 }
 
 
